SCOUT-52 Add bulk HL7 log extraction + improve race conditions (#28)
* Refactor hl7 ingest workflow to be able to operate on batches of multiple dates

* Fix: get year from date